# tipApp

./: .project  CMakeLists.txt
.devcontainer/: devcontainer.json
API/: CMakeLists.txt
API/BSP/: CMakeLists.txt
API/RTOS/: CMakeLists.txt
API/RTOS/FreeRTOS/Config/: FreeRTOSConfig.h
API/RTOS/FreeRTOS/FreeRTOS/Source/: CMakeLists.txt
App/: CMakeLists.txt
App/Src/: app.c
